--- a/.github/workflows/sync-version.yml
+++ b/.github/workflows/sync-version.yml
@@ -10,6 +10,10 @@ on:
 jobs:
   sync-version:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -39,3 +43,12 @@ jobs:
       - name: Show diff
         run: |
           git diff
+
+      - name: Push changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Update the formula
+          commit_options: '--signoff'
+          commit_user_name: GitHub Actions Bot
+          commit_user_email: actions@github.com
+          commit_author: GitHub Actions Bot <actions@github.com>
