--- a/.github/workflows/sync-version.yml
+++ b/.github/workflows/sync-version.yml
@@ -30,8 +30,8 @@ jobs:
       - id: get-sha256
         name: Download and hash
         run: |
-          wget -o release.tar.gz https://github.com/PowerGridModel/power-grid-model/archive/refs/tags/${{ steps.get-release.outputs.release }}.tar.gz
-          echo "sha256=$(shasum -a 256 release.tar.gz | awk '{print $1}')" >> "$GITHUB_OUTPUT"
+          wget https://github.com/PowerGridModel/power-grid-model/archive/refs/tags/${{ steps.get-release.outputs.release }}.tar.gz
+          echo "sha256=$(shasum -a 256 ${{ steps.get-release.outputs.release }}.tar.gz | awk '{print $1}')" >> "$GITHUB_OUTPUT"
 
       - name: Render formulae
         uses: cuchi/jinja2-action@v1.3.0
